--- a/style.css
+++ b/style.css
@@ -2,14 +2,56 @@ body {
   box-sizing: border-box;
   font-family: "Barlow Condensed", sans-serif;
   color: #242424;
+  /* color: rgb(255, 255, 255, 0.9); */
+  /* color: rgb(211, 7, 7); */
+  /* color: black; */
+  /* width: 100%; */
   width: 100%;
-  background-color: rgb(250, 246, 240);
+  /* background-color: rgb(233, 207, 207); */
+  /* background-image: url("./01codespiral.jpg"); */
+  background:linear-gradient(rgba(248, 216, 216, 0.5), rgba(255, 218, 218, 0.5)), url("./01codespiral.jpg");
   text-align: center;
+  /* font-size: 1.4rem; */
   font-size: 1.4rem;
+  font-weight: 600;
+}
+
+gg {
+  box-sizing: border-box;
+  font-family: "Barlow Condensed", sans-serif;
+  color: #242424;
+  /* color: red; */
+  /* color: rgb(211, 7, 7); */
+  /* color: black; */
+  /* width: 100%; */
+  width: 100%;
+  /* background-color: rgb(233, 207, 207); */
+  text-align: center;
+  /* font-size: 1.4rem; */
+  font-size: 1.4rem;
+  font-weight: 550;
+}
+
+ggt {
+  box-sizing: border-box;
+  font-family: "Barlow Condensed", sans-serif;
+  /* color: #242424; */
+  /* color: red; */
+  color: rgb(211, 7, 7);
+  /* color: black; */
+  /* width: 100%; */
+  width: 100%;
+  /* background-color: rgb(233, 207, 207); */
+  text-align: center;
+  /* font-size: 1.4rem; */
+  font-size: 1.4rem;
+  font-weight: 800;
 }
 
 .navbar {
+  
   background-color: #242424;
+  
 }
 
 h2,
@@ -20,7 +62,11 @@ h6,
 .fa-user-tag,
 .list-inline-item i:hover,
 .linkedin-link a {
-  color: #1874cd;
+  /* color: #1874cd; */
+  /* color:rgb(211, 7, 7); */
+  /* color:rgb(0, 0, 0); */
+  color:rgb(3, 51, 197);
+  /* color:royalblue; */
 }
 
 h2,
@@ -30,6 +76,7 @@ h6,
 #sideNav {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
+  
 }
 
 h1,
@@ -42,13 +89,17 @@ h1,
 h1,
 .mobile-name,
 .edu-icons {
-  color: #696969;
+  /* color: #696969; */
+  color: rgb(211, 7, 7);
+  size: 200px;
+  /* color: #c4c4c4; */
 }
 
 .list-social-icons a,
 a:hover,
 a:focus {
-  color: #c4c4c4;
+  /* color: #c4c4c4; */
+  color: rgb(211, 7, 7);
 }
 
 .list-social-icons {
@@ -83,7 +134,8 @@ a {
 }
 
 #mail-address a {
-  color: #242424;
+  /* color: #242424; */
+  color: rgb(211, 7, 7);
 }
 
 .fa-ul {
