sumary profile changed

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ h1,
 .edu-icons {
   /* color: #696969; */
   color: rgb(211, 7, 7);
-  size: 200px;
+  /* size: 200px; */
   /* color: #c4c4c4; */
 }
 
