--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 body {
   box-sizing: border-box;
   font-family: "Barlow Condensed", sans-serif;
-  color: #242424;
+  /* color: #242424; */
   /* color: rgb(255, 255, 255, 0.9); */
   /* color: rgb(211, 7, 7); */
   /* color: black; */
   /* width: 100%; */
+  color: rgb(250, 250, 231);
   width: 100%;
   /* background-color: rgb(233, 207, 207); */
   /* background-image: url("./01codespiral.jpg"); */
-  background:linear-gradient(rgba(248, 216, 216, 0.5), rgba(255, 218, 218, 0.5)), url("./01codespiral.jpg");
+  background:linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url("./01codespiral.jpg");
   text-align: center;
   /* font-size: 1.4rem; */
   font-size: 1.4rem;
@@ -37,9 +38,11 @@ ggt {
   font-family: "Barlow Condensed", sans-serif;
   /* color: #242424; */
   /* color: red; */
-  color: rgb(211, 7, 7);
+  /* color: rgb(211, 7, 7); */
   /* color: black; */
   /* width: 100%; */
+  /* color: #1873cde0; */
+  color:rgb(3, 51, 197);
   width: 100%;
   /* background-color: rgb(233, 207, 207); */
   text-align: center;
@@ -135,7 +138,8 @@ a {
 
 #mail-address a {
   /* color: #242424; */
-  color: rgb(211, 7, 7);
+  /* color: rgb(211, 7, 7); */
+  color: white;
 }
 
 .fa-ul {
