--- a/style.css
+++ b/style.css
@@ -7,14 +7,62 @@ body {
   /* color: black; */
   /* width: 100%; */
   color: rgb(250, 250, 231);
+ 
+  
   width: 100%;
   /* background-color: rgb(233, 207, 207); */
   /* background-image: url("./01codespiral.jpg"); */
-  background:linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url("./01codespiral.jpg");
+  background:linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url("./01code7.jpg");
   text-align: center;
   /* font-size: 1.4rem; */
   font-size: 1.4rem;
+  font-weight: 500;
+}
+mt0{
+  color:rgb(3, 51, 197);
+}
+
+mt1{
+  color: rgb(211, 7, 7);
+  font-size: 1.6rem;
+  
+  /* background-color:  #242424; */
+}
+
+mt2{
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 1.4rem;
+  font-weight: 500;
+  background-color:  #242424;
+}
+
+mt3{
+  font-size: 1.2rem;
   font-weight: 600;
+  font-style: oblique;
+  /* background-color:  #a8bddd; */
+  background-color:  #242424;
+  color:rgb(81, 119, 231);
+}
+
+mt4{
+  color: rgb(250, 250, 231);
+  font-size: 1.4rem;
+  font-weight: 500;
+  background-color: #242424;
+}
+
+myc{
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 1.4rem;
+  font-weight: 500;
+  background-color:  #242424;
+  color:rgb(157, 207, 226);
+}
+
+
+fn{
+  background-color: #242424;
 }
 
 gg {
@@ -35,6 +83,7 @@ gg {
 
 ggt {
   box-sizing: border-box;
+
   font-family: "Barlow Condensed", sans-serif;
   /* color: #242424; */
   /* color: red; */
@@ -66,9 +115,10 @@ h6,
 .list-inline-item i:hover,
 .linkedin-link a {
   /* color: #1874cd; */
-  /* color:rgb(211, 7, 7); */
+  color:rgb(211, 7, 7);
   /* color:rgb(0, 0, 0); */
-  color:rgb(3, 51, 197);
+  /* color:rgb(3, 51, 197); */
+/* color: red; */
   /* color:royalblue; */
 }
 
