--- a/style.css
+++ b/style.css
@@ -12,14 +12,49 @@ body {
   width: 100%;
   /* background-color: rgb(233, 207, 207); */
   /* background-image: url("./01codespiral.jpg"); */
-  background:linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url("./01code7.jpg");
+  background:linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), url("./01code1.jpg");
   text-align: center;
   /* font-size: 1.4rem; */
   font-size: 1.4rem;
   font-weight: 500;
 }
+
+p1{
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: rem;
+  font-weight: 500;
+  color: rgb(250, 250, 231);
+  background-color:  #242424;
+}
+
+p2{
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 3rem;
+  font-weight: 700;
+  /* color: rgb(211, 7, 7); */
+  /* background-color:  #242424; */
+/* color: snow; */
+/* color:rgb(3, 51, 197); */
+  background-color: rgb(211, 7, 7);
+  /* background-color: snow; */
+   color:snow;
+  /* background-color: rgb(3, 51, 197);  */
+  border-radius: 7%;
+  
+
+}
+
+p2-1{
+  font-family: "Poppins", sans-serif;
+  font-size: 1.7rem;
+  font-weight: 600;
+  color: white;
+  background-color:  #242424;
+}
+
 mt0{
   color:rgb(3, 51, 197);
+  font-weight: 500;
 }
 
 mt1{
@@ -30,7 +65,7 @@ mt1{
 }
 
 mt2{
-  font-family: "Barlow Condensed", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 1.4rem;
   font-weight: 500;
   background-color:  #242424;
@@ -47,7 +82,7 @@ mt3{
 
 mt4{
   color: rgb(250, 250, 231);
-  font-size: 1.4rem;
+  font-size: 2rem;
   font-weight: 500;
   background-color: #242424;
 }
